# CMD-Calculator

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
calc/: __init__.py  cli.py  operations.py
calc_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_cli.py  test_main.py  test_operations.py  test_package_main.py
